--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Software developer with professional experience, bachelor's and Master’s graduate in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively.</p>
-                            <p>
+                            <p>Software developer with professional experience, bachelor's in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively.</p>
+                            <p>For the past 8 years I have been an aggressive and passionate Java Programming Expert and a proven Problem Solver in variety of technologies. Currently looking for an opportunity to contribute my services.</p>
+                            
+                            <!-- <p>
                               I have industry exposure and functional understanding of high tech startup ecosystem, also, skills gained at work gave me the confidence to compete against the odds. I'm an active developer who is passionate about new technology.I have undertaken several projects using cutting-edge technologies.
-                            </p>
+                            </p> -->
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -178,7 +180,7 @@
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
-                <section class="experience section">
+<!--                 <section class="experience section">
                     <div class="section-inner">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
@@ -190,7 +192,7 @@
                                   <li> Made Ajax calls using backbone.js for getting the data and parsing it for showing on the web page</li>
                                 </ul>
                             </div><!--//item-->
-                            <div class="item">
+<!--                             <div class="item">
                                 <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year"></span></h3>
                                 <ul>
                                     <li>Analyze all business processes and ensure compliance to all controlled processes according to business flow and requirement</li>
@@ -201,11 +203,10 @@
                                     <li>Developed persistence layer modules using EJB Java Persistence API( JPA) annotations and Entitymanager</li>
                                     <li>Used Eclipse IDE and utilized git for source code repository management, creating views and performing code delivery, code labeling and code merging</li>
                                 </ul>
-                            </div><!--//item-->
-
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </section><!--//section-->
+                            </div><!--//item--> 
+<!--                         </div>//content-->
+<!--                     </div>//section-inner -->
+<!--                 </section>//section -->
                 <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub Activity</h2>
@@ -311,10 +312,10 @@
                     <div class="section-inner">
                         <h2 class="heading">Education</h2>
                         <div class="content">
-                            <div class="item">
+<!--                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Science</h3>
                                 <h4 class="university">University of South Florida <span class="year"></span></h4>
-                            </div><!--//item-->
+                            </div><!--//item--> 
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science</h3>
                                 <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
@@ -353,7 +354,7 @@
 
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Favourite Websites </h2>
+                        <h2 class="heading">More about me </h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-code"></i> <a href="https://www.hackerrank.com/fatmazaman">HackerRank</a></li>
@@ -368,11 +369,14 @@
 
                 <aside class="list conferences aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Conferences</h2>
+                        <h2 class="heading">Certification and Activities</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-calendar"></i> <a href="http://gracehopper.org/2015-scholars/page/49/" target="_blank">Grace Hopper Conference -
-                                    2015</a></li>
+                                <li><i class="fa fa-calendar"></i> Oracle Certified Professional, Java SE 6 Programmer </li>
+                                <li><i class="fa fa-calendar"></i> Certification in Java EE Application from NIIT </li>
+                                <li><i class="fa fa-calendar"></i> Participated in OSD(Open Source Day ) ,Organized by Google & github </li>
+                                <li><i class="fa fa-calendar"></i> Attended GHC(Grace Hopper Conference), Sponsored by Gusto </li>
+                                <li><i class="fa fa-calendar"></i> Appreciation for teaching from Great American Teach </li>
                                 <!-- <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Hive</a> (Seattle)</li> -->
                             </ul>
                         </div><!--//content-->
