--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Software developer with professional experience, bachelor's in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively.</p>
-                            <p>For the past 8 years I have been an aggressive and passionate Java Programming Expert and a proven Problem Solver in variety of technologies. Currently looking for an opportunity to contribute my services.</p>
+                            <p>A Software Developer with professional experience, Bachelor and Master degree in Computer Science and great enthusiasm for software applications.I have acquired important skills in algorithmic thinking and programming practices (OOP, data structure and algorithms) and I am passionate about research, innovation, analytical thinking, integrations, optimizations, and problems solving. I am also interested in acquiring new knowledge, multiplying my skills, and improving my technical training and experience. I enjoy doing my best and focusing my efforts on efficiently fulfill my duties, innovating, making enhancements on the processes and systems around me, and accomplishing the toughest objectives.</p>
+                            
                             
                             <!-- <p>
                               I have industry exposure and functional understanding of high tech startup ecosystem, also, skills gained at work gave me the confidence to compete against the odds. I'm an active developer who is passionate about new technology.I have undertaken several projects using cutting-edge technologies.
