--- a/index.html
+++ b/index.html
@@ -244,17 +244,17 @@
                             <div class="skillset">
 
                               <div class="item">
-                                  <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="">Advance</span></h3>
+                                  <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="">Pro</span></h3>
                                   <div class="level-bar">
-                                      <div class="level-bar-inner" data-level="60%">
+                                      <div class="level-bar-inner" data-level="80%">
                                       </div>
                                   </div><!--//level-bar-->
                               </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="">Pro</span></h3>
+                                    <h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="">Advance</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="80%">
+                                        <div class="level-bar-inner" data-level="60%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
@@ -266,9 +266,9 @@
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
                                 <div class="item">
-                                    <h3 class="level-title">Javascript<span class="level-label">Pro</span></h3>
+                                    <h3 class="level-title">Javascript<span class="level-label">Intermediate</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="80%">
+                                        <div class="level-bar-inner" data-level="40%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
@@ -312,10 +312,10 @@
                     <div class="section-inner">
                         <h2 class="heading">Education</h2>
                         <div class="content">
-<!--                             <div class="item">
+                            <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Science</h3>
                                 <h4 class="university">University of South Florida <span class="year"></span></h4>
-                            </div><!--//item--> 
+                            </div><!--//item 
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science</h3>
                                 <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
