--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Science</h3>
                                 <h4 class="university">University of South Florida <span class="year"></span></h4>
-                            </div><!--//item 
+                            </div>
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science</h3>
                                 <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
-                            </div><!--//item-->
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
+                            </div>
+                        </div>
+                    </div>
+                </aside>
 
                 <aside class="languages aside section">
                     <div class="section-inner">
