--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                                     <li>Developed persistence layer modules using EJB Java Persistence API( JPA) annotations and Entitymanager</li>
                                     <li>Used Eclipse IDE and utilized git for source code repository management, creating views and performing code delivery, code labeling and code merging</li>
                                 </ul>
-                            </div><!--//item--> 
+<!--                             </div><!--//item--> 
 <!--                         </div>//content-->
 <!--                     </div>//section-inner -->
-<!--                 </section>//section -->
+<!--                 </section>//section --> -->
                 <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub Activity</h2>
