--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
                     <div class="section-inner">
                         <h2 class="heading">Education</h2>
                         <div class="content">
-                            <div class="item">
+<!--                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Science</h3>
                                 <h4 class="university">University of South Florida <span class="year"></span></h4>
-                            </div>
+                            </div> -->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science</h3>
                                 <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
