--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2 class="desc">Software Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/Zaman_Fatma" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+<!--                     <li><a href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-linkedin"></i></a></li> -->
                     <li><a href="https://github.com/fatmazaman" target="_blank"><i class="fa fa-github-alt"></i></a></li>
                     <!-- <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li> -->
                 </ul>
